--- a/src/components/partials/Header.astro
+++ b/src/components/partials/Header.astro
@@ -1,1 +1,6 @@
-<div>header</div>
+<div class="container pb-6 pt-3 z-50 absolute">
+	<div class="flex justify-end gap-2">
+		<span class="text-white font-bold">Anmelden</span>
+		<img src="/img//login-small.svg" alt="">
+	</div>
+</div>
