--- a/src/components/partials/Footer.astro
+++ b/src/components/partials/Footer.astro
@@ -1,1 +1,20 @@
-<div>footer</div>
+<div class="bg-gradient-to-t from-[#DDDDDD] to-white">
+	<div class="container pb-8 pt-24">
+			<div class="flex justify-between gap-8">
+				<div class="flex items-center gap-8">
+					<a href="/" class="shrink-0">
+						<img src="/img/footer-logo.svg" alt="">
+					</a>
+					<ul class="text-[#1a1a1a] text-[11px] font-bold flex gap-8">
+						<li> <a href="/">Impressum</a></li>
+						<li><a href="/">Datenschutz</a></li>
+						<li><a href="/">Kontakt</a></li>
+					</ul>
+				</div>
+				<div class="flex items-center gap-1">
+					<span class="uppercase font-bold text-[#1a1a1a] text-xs">DEU</span>
+					<img src="/img/dropdown.svg" alt="">
+				</div>
+			</div>
+	</div>
+</div>
