--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,15 +1,108 @@
-/*
-Please create a `fonts` folder in the `public` folder then add the font files there.
-
-Example usage:
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_light-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_light-webfont.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+	font-display: swap;
+}
 
 @font-face {
-  font-family: "proxima_nova";
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_light_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_light_italic-webfont.woff") format("woff");
+  font-weight: 300;
+  font-style: italic;
+	font-display: swap;
+}
+
+
+@font-face {
+  font-family: "Proxima Nova";
   src: url("/fonts/proxima_nova_regular-webfont.woff2") format("woff2"),
-    url("proxima_nova_regular-webfont.woff") format("woff");
+    url("/fonts/proxima_nova_regular-webfont.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 	font-display: swap;
 }
 
-*/
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_regular_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_regular_italic-webfont.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_semibold-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_semibold-webfont.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_semibold_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_semibold_italic-webfont.woff") format("woff");
+  font-weight: 600;
+  font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_bold-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_bold-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_bold_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_bold_italic-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_extrabold-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_extrabold-webfont.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_extrabold_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_extrabold_italic-webfont.woff") format("woff");
+  font-weight: 800;
+  font-style: italic;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_black-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_black-webfont.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/proxima_nova_black_italic-webfont.woff2") format("woff2"),
+    url("/fonts/proxima_nova_black_italic-webfont.woff") format("woff");
+  font-weight: 900;
+  font-style: italic;
+	font-display: swap;
+}
