--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,12 @@ const { title } = Astro.props;
 			href='/favicon-32x32.png'
 		/>
 
+		<link
+			rel='stylesheet'
+			href='https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css'
+		/>
+		<script src='https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/js/splide.min.js'></script>
+
 		<script
 			defer
 			src='https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js'
