--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Footer from '@partials/Footer.astro';
 import Home from '@pages/Home.astro';
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title='Crew Card Demo'>
 	<Header />
 	<Home />
 	<Footer />
