--- a/src/components/partials/Footer.astro
+++ b/src/components/partials/Footer.astro
@@ -1,5 +1,5 @@
 <div class='bg-gradient-to-t from-[#DDDDDD] to-white'>
-	<div class='container pb-8 pt-24'>
+	<div class='container pb-[30px] pt-[104px]'>
 		<div class='flex justify-between gap-8'>
 			<div class='flex items-center gap-8'>
 				<a
