--- a/src/components/partials/Header.astro
+++ b/src/components/partials/Header.astro
@@ -1,6 +1,9 @@
-<div class="container pb-6 pt-3 z-50 absolute">
-	<div class="flex justify-end gap-2">
-		<span class="text-white font-bold">Anmelden</span>
-		<img src="/img//login-small.svg" alt="">
+<div class='container absolute z-50 pb-6 pt-3'>
+	<div class='flex justify-end gap-2'>
+		<span class='text-xs font-bold text-white'>Anmelden</span>
+		<img
+			src='/img//login-small.svg'
+			alt=''
+		/>
 	</div>
 </div>
