--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,10 @@
 			display: none;
 		}
 	}
+
+	select {
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M12 16L6 10H18L12 16Z'%3E%3C/path%3E%3C/svg%3E");
+	}
 }
 
 @layer components {
